Prevodjenje programskih jezika/sve2019/7_1/izrazi2/parser.output
Grammar

    0 $accept: niz_naredbi $end

    1 niz_naredbi: niz_naredbi naredba ';'
    2            | naredba ';'

    3 naredba: e

    4 e: e '+' e
    5  | e '-' e
    6  | e '*' e
    7  | e '/' e
    8  | '-' e
    9  | '(' e ')'
   10  | BROJ


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9
')' (41) 9
'*' (42) 6
'+' (43) 4
'-' (45) 5 8
'/' (47) 7
';' (59) 1 2
error (256)
UMINUS (258)
BROJ (259) 10


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
niz_naredbi (13)
    on left: 1 2, on right: 0 1
naredba (14)
    on left: 3, on right: 1 2
e (15)
    on left: 4 5 6 7 8 9 10, on right: 3 4 5 6 7 8 9


State 0

    0 $accept: . niz_naredbi $end

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    niz_naredbi  go to state 4
    naredba      go to state 5
    e            go to state 6


State 1

    8 e: '-' . e

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 7


State 2

   10 e: BROJ .

    $default  reduce using rule 10 (e)


State 3

    9 e: '(' . e ')'

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 8


State 4

    0 $accept: niz_naredbi . $end
    1 niz_naredbi: niz_naredbi . naredba ';'

    $end  shift, and go to state 9
    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    naredba  go to state 10
    e        go to state 6


State 5

    2 niz_naredbi: naredba . ';'

    ';'  shift, and go to state 11


State 6

    3 naredba: e .
    4 e: e . '+' e
    5  | e . '-' e
    6  | e . '*' e
    7  | e . '/' e

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 3 (naredba)


State 7

    4 e: e . '+' e
    5  | e . '-' e
    6  | e . '*' e
    7  | e . '/' e
    8  | '-' e .

    $default  reduce using rule 8 (e)


State 8

    4 e: e . '+' e
    5  | e . '-' e
    6  | e . '*' e
    7  | e . '/' e
    9  | '(' e . ')'

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15
    ')'  shift, and go to state 16


State 9

    0 $accept: niz_naredbi $end .

    $default  accept


State 10

    1 niz_naredbi: niz_naredbi naredba . ';'

    ';'  shift, and go to state 17


State 11

    2 niz_naredbi: naredba ';' .

    $default  reduce using rule 2 (niz_naredbi)


State 12

    4 e: e '+' . e

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 18


State 13

    5 e: e '-' . e

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 19


State 14

    6 e: e '*' . e

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 20


State 15

    7 e: e '/' . e

    '-'   shift, and go to state 1
    BROJ  shift, and go to state 2
    '('   shift, and go to state 3

    e  go to state 21


State 16

    9 e: '(' e ')' .

    $default  reduce using rule 9 (e)


State 17

    1 niz_naredbi: niz_naredbi naredba ';' .

    $default  reduce using rule 1 (niz_naredbi)


State 18

    4 e: e . '+' e
    4  | e '+' e .
    5  | e . '-' e
    6  | e . '*' e
    7  | e . '/' e

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 4 (e)


State 19

    4 e: e . '+' e
    5  | e . '-' e
    5  | e '-' e .
    6  | e . '*' e
    7  | e . '/' e

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 5 (e)


State 20

    4 e: e . '+' e
    5  | e . '-' e
    6  | e . '*' e
    6  | e '*' e .
    7  | e . '/' e

    $default  reduce using rule 6 (e)


State 21

    4 e: e . '+' e
    5  | e . '-' e
    6  | e . '*' e
    7  | e . '/' e
    7  | e '/' e .

    $default  reduce using rule 7 (e)
